@@ -2,9 +2,6 @@ package com.m01project.taskmanager.demo.service;
 
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-
 /**
  * HelloWorldService - A practice service for beginners
  * 
@@ -14,30 +11,10 @@ import java.time.format.DateTimeFormatter;
 @Service
 public class HelloWorldService {
 
-    public String sayHello() {
-        return "Hello World!";
-    }
-
     public String sayHelloTo(String name) {
-        if(name != null && !name.isBlank()) {
-            return "hello " + name.trim();
+        if (name == null || name.trim().isEmpty()) {
+            return "Error: In Islam, a child is named through Azan — please provide a name!";
         }
-        else {
-            return "hello nobody!";
-        }
+        return "Hello " + name;
     }
-
-    public String getCurrentTime() {
-        LocalDateTime now = LocalDateTime.now();
-        DateTimeFormatter formatter = DateTimeFormatter.BASIC_ISO_DATE;
-        return now.format(formatter);
-    }
-
-    /**
-     * Examples you can implement:
-     * - public String sayHelloTo(String name)
-     * - public String getCurrentTime()
-     * - public int addNumbers(int a, int b)
-     */
-    
 }
